Update collection name, add readme

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div id="app">
         <section class="todoapp" style="margin-top: 130px; margin-bottom: 40px">
             <header class="header">
-                <h1>action logs</h1>
+                <h1>actions</h1>
                 <input autofocus="autofocus" autocomplete="off" placeholder="What needs to be log?" class="new-todo"
                     v-model="text" @keyup="keyup($event, 'createLog')">
                 <img class="submit-button" style="position: absolute;right: 10px;top: 12px;cursor: pointer;"
