Send notification via OneSignal

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             <section class="todoapp" style="margin-top: 130px; margin-bottom: 40px">
                 <header class="header">
                     <h1>Login</h1>
-                    <input type="text" class="new-todo" v-model="username" placeholder="Username"
+                    <input type="text" class="new-todo" v-model="username" placeholder="Username" autofocus
                         style="font-size: 14px" @keyup="keyup($event, 'login')">
                     <input type="password" class="new-todo" v-model="password" placeholder="Password"
                         style="font-size: 14px" @keyup="keyup($event, 'login')">
